fixed some minor spacing and title issues

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -60,7 +60,9 @@ h1, h2, h3, h4, h5 {
     letter-spacing: 1px;
     margin-bottom: 15px;
 }
+
 /* End of reset */
+
 nav {
 	display: flex;
 	justify-content: space-evenly;
@@ -206,7 +208,6 @@ footer {
 	display: flex;
 	flex-direction: column;
 	border: 1px solid black;
-	justify-content: space-around;
 	background-color: #f3f3f3;
 	margin-bottom: 3%;
 	padding: 3%;
@@ -220,7 +221,6 @@ footer {
 	padding-left: 5%;
 	padding-right: 5%;
 	width: 30%;
-	border-right: ;
 	margin-top: 20px;
 	text-decoration: none;
 	line-height: 10px;
